--- a/landing_page.css
+++ b/landing_page.css
@@ -30,8 +30,13 @@ li {
  display: flex;
  align-items: center;
  justify-content: space-between;
- padding: 20px;
- /* background-color: teal; */
+ padding: 10px;
+ background-color: #2c3967;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
  /* color: #fff; */
 }
 .nav-links a {
@@ -39,6 +44,15 @@ li {
 }
 .nav-links a:hover {
   color: #57feff;
+}
+
+.nav-links a:hover i {
+  border: solid #57feff;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg)
 }
 
 /* LOGO */
@@ -52,18 +66,31 @@ li {
  font-size: 18px;
  margin-top: 5px;
 }
+
 .menu li:hover {
  /* background-color: #57feff; */
  border-radius: 5px;
  transition: 0.3s ease;
 }
+
 .menu li {
  padding: 5px 14px;
 }
+
 /* DROPDOWN MENU */
 .services {
  position: relative; 
 }
+
+.arrow-down {
+  border: solid #fe5ab4;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
 .dropdown {
  background-color: #2c3967;
  padding: 1em 0;
@@ -71,6 +98,7 @@ li {
  display: none;
  border-radius: 8px;
  top: 35px;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 .dropdown li + li {
  margin-top: 10px;
@@ -108,6 +136,7 @@ input[type=checkbox]{
  left: 0;
  text-align: center;
  padding: 16px 0;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 .menu li:hover {
  display: inline-block;
@@ -138,6 +167,10 @@ input[type=checkbox]:checked ~ .menu{
   /* color: #fe5ab4; */
   /* background-color: #2c3967; */
 /* } */
+
+main {
+padding-top: 70px;
+}
 
 h1 {
   font-size: 3rem;
@@ -198,6 +231,10 @@ header {
   background-color: yellow;
 }
 
+.artist {
+  color: #57feff;
+}
+
 #advice {
   font-size: 10px;
 }
@@ -217,7 +254,7 @@ header {
 
 .player {
   /* height: 95vh; */
-  padding: 30px;
+  /* padding: 30px; */
   width: 450px;
   display: flex;
   align-items: center;
