--- a/landing_page.css
+++ b/landing_page.css
@@ -41,9 +41,15 @@ li {
 }
 .nav-links a {
  color: #fe5ab4;
+ transition: color 0.3s, text-shadow 0.3s;
 }
 .nav-links a:hover {
   color: #57feff;
+  text-shadow: 0 0 1px #57feff, 0 0 50px #57feff;
+}
+
+.nav-links a i {
+ transition: border .3s, display .3s;
 }
 
 .nav-links a:hover i {
@@ -64,7 +70,7 @@ li {
  display: flex;
  gap: 1em;
  font-size: 18px;
- margin-top: 5px;
+ /* margin-top: 5px; */
 }
 
 .menu li:hover {
@@ -98,7 +104,7 @@ li {
  display: none;
  border-radius: 8px;
  top: 35px;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+ box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 .dropdown li + li {
  margin-top: 10px;
@@ -136,7 +142,7 @@ input[type=checkbox]{
  left: 0;
  text-align: center;
  padding: 16px 0;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+ box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 .menu li:hover {
  display: inline-block;
@@ -233,6 +239,7 @@ header {
 
 .artist {
   color: #57feff;
+  text-shadow: 0 0 1px #57feff, 0 0 50px #57feff;
 }
 
 #advice {
